[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PyThea"
version = "1.1.0"
description = "PyThea: A software package to reconstruct the 3D structure of CMEs and shock waves"
authors = ["Athanasios Kouloumvakos <athkouloumvakos@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://www.pythea.org"
repository = "https://github.com/AthKouloumvakos/PyThea"
documentation = "https://www.pythea.org/en/latest/"
keywords = ["science", "solar physics", "solar", "coronal mass ejections", "shock waves", "EUV waves"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "PyThea"}]

[tool.poetry.dependencies]
python = ">=3.11"
sunpy = "6.0.4"
parfive = ">=2.0.0"
pandas = "*"
scipy = "*"
matplotlib = "*"
aiapy = "*"
numexpr = "*"
streamlit = "*"
seaborn = "*"
pyvista = "*"
sunpy_soar = "*"

[tool.poetry.group.test.dependencies]
jplephem = "*"
pooch = "*"
pytest = "*"
pytest-astropy = "*"
pytest-sugar = "*"
pytest-mpl = "*"

[tool.poetry.group.docs.dependencies]
pooch = "*"
plotly = "*"
jplephem = "*"
sphinx = ">=6.0.0"
sphinx-automodapi = "*"
sphinx-gallery = "*"
jupyter_sphinx = "*"
sphinx-rtd-theme = "*"
numpydoc = "*"

[tool.poetry.scripts]
pythea = "PyThea.pythea_cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AthKouloumvakos/PyThea/issues"
"Download" = "https://pypi.org/project/PyThea"